<resources>
    <string name="app_name">SmartX</string>
    <string name="facebook_app_id">2238427326432443</string>
    <string name="fb_login_protocol_scheme">fb2238427326432443</string>
    <string name="shareKey">b77a38ec4b8caea8569894d2e56577df</string>
    <string name="server">http://104.248.236.184:3000/api/</string>
    <string name="user">af5ff2a549c2090a382151614def2a3e</string>
    <string name="pwd">b77a38ec4b8caea8569894d2e56577df</string>
    <string name="iniciarO">Otros metodos de inicio de sesión:</string>
    <string name="iniciarC">Iniciar sesión via correo</string>
    <string name="iniciarG">Iniciar sesión via Google</string>
    <string name="error_inicio">Error, No se logró iniciar sesión</string>
    <string name="error_cerrar">Error, No se logró cerrar sesión</string>
    <string name="error_campo">Campo vacío</string>
    <string name="titulo_camara">¿En donde se encuentra la imagen?</string>
    <string name="subtitulo_camara">Seleccione la foto</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="nombres">Nombre</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="apellido">Ingresa tus apellidos</string>
    <string name="error_servicio">Ocurrió un error, inténtalo más tarde 😭</string>
    <string name="error_foto">Selecciona la imagen 😅</string>
    <string name="error_foto_subir">Error al subir la imagen 😭</string>
    <string name="exito_subir_imagen">La imagen se subió correctamente 😉</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="foto_perfil">Selecciona tú foto de perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo Electrónico</string>
    <string name="iniciandoS">Iniciando sesión…</string>
    <string name="cargando">Cargando…</string>
    <string name="iniciarS">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="olvido">Recuperar contraseña</string>
    <string name="cerrarS">Cerrar sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="completa_t_informaci_n">Completa tú información</string>
    <string name="error_seleccion">No seleccionó ninguna imagen.</string>
    <string name="ingresa_aqu_tu_correo_para_reestablecerla">Ingresa aquí tu correo para reestablecerla</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="numTel">Número Teléfonico</string>
    <string name="verificar">Verifica tu cuenta</string>
    <string name="verificacorreo">Se ha enviado un correo de confirmación, favor de ingresar al link para poder entrar a SmartX.</string>
    <string name="busqueda">¿Qué buscas?</string>
</resources>
