<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/black">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text="@string/ingresa_aqu_tu_correo_para_reestablecerla"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="15dp">
            <EditText
                android:id="@+id/eCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:hint="@string/correo"
                />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:id="@+id/bCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/boton_redondo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/cancelar"/>
        <Button
            android:id="@+id/bEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/boton_redondo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/enviar"/>
    </LinearLayout>
</LinearLayout>