<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividades.LogIn">
    <ImageView
        android:id="@+id/iFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icono_inicio"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/vIniciarC"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/iniciarC"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">
                <EditText
                    android:id="@+id/eUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/eContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/vOlvido"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/olvido"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bRegistrar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/boton_redondo" />
            <Button
                android:id="@+id/bIniciar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_marginHorizontal="8dp"
                android:text="@string/iniciarS"
                android:textColor="@color/white"
                android:background="@drawable/boton_redondo"/>
        </LinearLayout>
    <TextView
        android:id="@+id/vIniciarO"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/iniciarO"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:weightSum="2"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/facebook"/>
            <ImageView
                android:id="@+id/iGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/google"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>