<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.SignIn">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>
    <TextView
        android:id="@+id/vInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/completa_t_informaci_n" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iFoto"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:layout_below="@id/vInfo"
        android:src="@drawable/fotopersona"/>
    <TextView
        android:id="@+id/vSeleccionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:text="@string/foto_perfil"
        android:layout_margin="10dp"
        android:layout_below="@+id/iFoto"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/vSeleccionar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <EditText
                        android:id="@+id/eNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="textCapSentences|textPersonName|textAutoCorrect"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <EditText
                        android:id="@+id/eApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido"
                        android:inputType="textPersonName|textAutoCorrect"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tNumTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <EditText
                        android:id="@+id/eNumTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numTel"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">

                    <EditText
                        android:id="@+id/eCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/eContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/bActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/boton_redondo"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>